 - Removed some pointless lines of code from SearchField->from_form
 - added "use bytes" to XML.pm - this solves some of the problems
    encountered with XML::DOM with unicode chars.

2005-11-16 cjg

 - Removed plugins from archivecfg and replaced it with Plugins
    which will use the new perl module based plugins.

2005-11-17 cjg

 - Changed to using perl modules for plugins. 
 - Made output plugins use this system, including archive-specific
    plugins.

2005-11-21 cjg

 - Rationalisted plugin directory names.
 - Merged Plugins.pm into being static methods of Plugin.pm
 - Added inital SOAP related files. These should not go in the
    release until they are more secure.
 - Erasing (completely) an eprint now also causes the static
    pages associated with it to be erased.

2005-11-22 cjg

 - Made a new method to database which returns the sql table of
    a cache given it's ID. Used this throughout Database.pm

2005-11-23 cjg 

 - Auth.pm can now use two additional config-area functions to
    limit a security setting by domain as well as by username.
 - Plugins now check they loaded correctly, and dump error 
    information if they didn't.
 - Split the rendering of search descriptions into what the
    set contains and how it is ordered. These are then passed
    to the results object as seperate XHTML objects.
 - SearchResults can now describe themselves in XHTML
 - SearchResults can create a new search results object with
    their set, but differently ordered.
 - Fixed a regexp to use "/" as a seperator - fixed syntax
    highlight issue.
 - Removed debug print's from Session
 - Auth now has 3 modes REQ REQ_AND_USER, REQ_OR_USER. REQ
    makes sure that a username/password is not prompted for
    when it is irrelevant.
 - Plugins now use paramters where possible rather than 
    functions which just return a single value. eg. suffix.

2005-11-24 cjg

 - Corrected a missing $session in soap/xsd
 - Moved to using params for plugin suffix
